More info added.

--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -83,7 +83,23 @@
 <li><a href="https://edit.tosdr.org/cases/324">324</a></li>
 <li><a href="https://edit.tosdr.org/cases/332">332</a></li>
 <li><a href="https://edit.tosdr.org/cases/378">378</a></li>
-<li><a href="https://edit.tosdr.org/cases/388">388</a><h3 id="topic-switch-">Topic Switch:</h3>
+<li><a href="https://edit.tosdr.org/cases/388">388</a></li>
+<li><a href="https://edit.tosdr.org/cases/278">278</a></li>
+<li><a href="https://edit.tosdr.org/cases/286">286</a></li>
+<li><a href="https://edit.tosdr.org/cases/288">288</a></li>
+<li><a href="https://edit.tosdr.org/cases/289">289</a></li>
+<li><a href="https://edit.tosdr.org/cases/120">120</a></li>
+<li><a href="https://edit.tosdr.org/cases/243">243</a></li>
+<li><a href="https://edit.tosdr.org/cases/139">139</a></li>
+<li><a href="https://edit.tosdr.org/cases/135">135</a></li>
+<li><a href="https://edit.tosdr.org/cases/402">402</a></li>
+<li><a href="https://edit.tosdr.org/cases/228">228</a></li>
+<li><a href="https://edit.tosdr.org/cases/227">227</a></li>
+<li><a href="https://edit.tosdr.org/cases/232">232</a></li>
+<li><a href="https://edit.tosdr.org/cases/231">231</a></li>
+<li><a href="https://edit.tosdr.org/cases/297">297</a></li>
+<li><a href="https://edit.tosdr.org/cases/299">299</a></li>
+<li><a href="https://edit.tosdr.org/cases/302">302</a><h3 id="topic-switch-">Topic Switch:</h3>
 </li>
 <li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/142">142</a></li>
@@ -105,19 +121,25 @@
 <li><a href="https://edit.tosdr.org/cases/156">156</a></li>
 </ul>
 </li>
-<li><a href="https://edit.tosdr.org/topics/26"><strong>Anonymity</strong></a><ul>
+<li><a href="https://edit.tosdr.org/topics/26"><strong>[Anonymity]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/324">324</a></li>
 </ul>
 </li>
-<li><a href="https://edit.tosdr.org/topics/30"><strong>Copyright License</strong></a>
--<h3 id="editing-">Editing:</h3>
+<li><a href="https://edit.tosdr.org/topics/30"><strong>[Copyright License]</strong></a>
+-</li>
+<li><a href>[Security]</a><ul>
+<li><a href="https://edit.tosdr.org/cases/291">291</a><h3 id="editing-">Editing:</h3>
+</li>
+</ul>
 </li>
 <li><strong><em>Re-Phrasing</em></strong><ul>
+<li><a href="https://edit.tosdr.org/cases/134">134</a> - <em>&quot;This service can license your content to third parties.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/183">183</a> - <em>&quot;You maintain ownership of your Content.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service are limited by a maximum amount and/or the fees you&apos;ve paid to the Service.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/373">373</a> - <em>&quot;This service may use and/or share your location data.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/120">120</a> - <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
 </ul>
 </li>
 <li><p><strong><em>Weight/Rating</em></strong></p>
