Added table of contents.

--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -24,6 +24,20 @@
 <body><div id="readme" class="container"><article class="markdown-body entry-content"><h1 id="case-revision-12-12-2020-">Case Revision [12/12/2020]</h1>
 <p>This is my personal list for suggestions regarding the <a href="https://edit.tosdr.org">Phoenix Site</a>, its organization and its Ratings. This list is an in-depth analysis of each category on the Phoenix Site, with the intention to make it as transparent, comprehensive and informative as possible.</p>
 <p>If you have any suggestions, feedback or ideas, don&apos;t hesitate to contact me or any other member of the ToS;DR Team!</p>
+<h2 id="table-of-contents">Table of Contents</h2>
+<ul>
+<li><a href="#topics">Topics</a><ul>
+<li><a href="#new-topics">New Topics</a></li>
+<li><a href="#topic-changes">Topic Changes</a></li>
+</ul>
+</li>
+<li><a href="#cases">Cases</a><ul>
+<li><a href="#this-service"><em>This Service</em></a></li>
+<li><a href="#topic-switch">Topic Switch</a></li>
+<li><a href="#editing">Editing</a></li>
+</ul>
+</li>
+</ul>
 <h2 id="topics">Topics</h2>
 <p>This section will be divided on categories, as there are many repeated points of change being made.</p>
 <h3 id="new-topics">New Topics</h3>
@@ -44,7 +58,7 @@
 </ul>
 <h2 id="cases">Cases</h2>
 <p>This section will be divided on categories, as there are many repeated points of change being made.</p>
-<h3 id="this-service-"><em>&quot;This Service...&quot;</em></h3>
+<h3 id="this-service">This Service</h3>
 <ul>
 <li><a href="https://edit.tosdr.org/cases/169">169</a></li>
 <li><a href="https://edit.tosdr.org/cases/237">237</a></li>
