Finished the "This Service" section.

--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -63,7 +63,6 @@
 <li><a href="https://edit.tosdr.org/cases/169">169</a></li>
 <li><a href="https://edit.tosdr.org/cases/237">237</a></li>
 <li><a href="https://edit.tosdr.org/cases/239">239</a></li>
-<li><a href="https://edit.tosdr.org/cases/300">300</a></li>
 <li><a href="https://edit.tosdr.org/cases/194">194</a></li>
 <li><a href="https://edit.tosdr.org/cases/303">303</a></li>
 <li><a href="https://edit.tosdr.org/cases/304">304</a></li>
@@ -84,7 +83,6 @@
 <li><a href="https://edit.tosdr.org/cases/338">338</a></li>
 <li><a href="https://edit.tosdr.org/cases/381">381</a></li>
 <li><a href="https://edit.tosdr.org/cases/209">209</a></li>
-<li><a href="https://edit.tosdr.org/cases/237">237</a></li>
 <li><a href="https://edit.tosdr.org/cases/165">165</a></li>
 <li><a href="https://edit.tosdr.org/cases/167">167</a></li>
 <li><a href="https://edit.tosdr.org/cases/305">305</a></li>
@@ -113,7 +111,31 @@
 <li><a href="https://edit.tosdr.org/cases/231">231</a></li>
 <li><a href="https://edit.tosdr.org/cases/297">297</a></li>
 <li><a href="https://edit.tosdr.org/cases/299">299</a></li>
-<li><a href="https://edit.tosdr.org/cases/302">302</a><h3 id="topic-switch-">Topic Switch:</h3>
+<li><a href="https://edit.tosdr.org/cases/302">302</a></li>
+<li><a href="https://edit.tosdr.org/cases/122">122</a></li>
+<li><a href="https://edit.tosdr.org/cases/124">124</a></li>
+<li><a href="https://edit.tosdr.org/cases/123">123</a></li>
+<li><a href="https://edit.tosdr.org/cases/121">121</a></li>
+<li><a href="https://edit.tosdr.org/cases/301">301</a></li>
+<li><a href="https://edit.tosdr.org/cases/329">329</a></li>
+<li><a href="https://edit.tosdr.org/cases/201">201</a></li>
+<li><a href="https://edit.tosdr.org/cases/204">204</a></li>
+<li><a href="https://edit.tosdr.org/cases/203">203</a></li>
+<li><a href="https://edit.tosdr.org/cases/205">205</a></li>
+<li><a href="https://edit.tosdr.org/cases/206">206</a></li>
+<li><a href="https://edit.tosdr.org/cases/379">379</a></li>
+<li><a href="https://edit.tosdr.org/cases/202">202</a></li>
+<li><a href="https://edit.tosdr.org/cases/176">176</a></li>
+<li><a href="https://edit.tosdr.org/cases/162">162</a></li>
+<li><a href="https://edit.tosdr.org/cases/384">384</a></li>
+<li><a href="https://edit.tosdr.org/cases/306">306</a></li>
+<li><a href="https://edit.tosdr.org/cases/323">323</a></li>
+<li><a href="https://edit.tosdr.org/cases/221">221</a></li>
+<li><a href="https://edit.tosdr.org/cases/375">375</a></li>
+<li><a href="https://edit.tosdr.org/cases/307">307</a></li>
+<li><a href="https://edit.tosdr.org/cases/189">189</a></li>
+<li><a href="https://edit.tosdr.org/cases/298">298</a></li>
+<li><a href="https://edit.tosdr.org/cases/300">300</a><h3 id="topic-switch-">Topic Switch:</h3>
 </li>
 <li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/142">142</a></li>
@@ -147,9 +169,13 @@
 </ul>
 </li>
 <li><strong><em>Re-Phrasing</em></strong><ul>
+<li><a href="https://edit.tosdr.org/cases/126">126</a> - <em>&quot;This service uses first-party cookies on you.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/134">134</a> - <em>&quot;This service can license your content to third parties.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/183">183</a> - <em>&quot;You maintain ownership of your Content.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/195">195</a> - <em>&quot;You can request access, correction and/or deletion of your data.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/206">206</a> - <em>&quot;This Service will give you prior notice before closing your account.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/385">385</a> - <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/373">373</a> - <em>&quot;This service may use and/or share your location data.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
@@ -158,10 +184,28 @@
 </li>
 <li><p><strong><em>Weight/Rating</em></strong></p>
 <ul>
+<li><a href="https://edit.tosdr.org/cases/161">161</a>, <a href="https://edit.tosdr.org/cases/162">162</a> and <a href="https://edit.tosdr.org/cases/398">398</a><ul>
+<li>Rating: <strong>Neutral</strong>.</li>
+<li>Weight: 70.</li>
+<li>Reason: <em>I believe Users need to be informed about a certain Service not granting them any refunds, and so a higher weight would make it mare visible.</em></li>
+</ul>
+</li>
 <li><a href="https://edit.tosdr.org/cases/167">167</a><ul>
 <li>Rating: <strong>Good</strong>.</li>
 <li>Weight: 20.</li>
 <li>Reason: <em>In reality many third parties have a legal basis to access your personal information, even though many of these may not have the best intentions or the best business practices...</em></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/239">239</a><ul>
+<li>Rating: <strong>Bad</strong></li>
+<li>Weight: 80.</li>
+<li>Reason: This is really bad, specially because it&apos;s private conversations we&apos;re talking about...</li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/336">336</a><ul>
+<li>Rating: <strong>Bad</strong>.
+-Weight: 30.
+Reason: <em>While this is no good, it&apos;s pretty much common practice, and for most services you can opt out with relative ease.</em></li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/393">393</a><ul>
@@ -173,7 +217,7 @@
 <li><a href="https://edit.tosdr.org/cases/176">176</a><ul>
 <li>Rating: <strong>Good</strong>.</li>
 <li>Weight: 25.</li>
-<li>Reason: _While a minimum amount of logs are kept, _</li>
+<li>Reason: <em>While a minimum amount of logs are kept, said service will still keep your data on storage...</em></li>
 </ul>
 </li>
 </ul>
