Ordered the content.

--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -43,16 +43,32 @@
 <h3 id="new-topics">New Topics</h3>
 <ul>
 <li><strong>Advertising</strong>.<ul>
-<li><a href="https://edit.tosdr.org/cases/220">220</a></li>
 <li><a href="https://edit.tosdr.org/cases/211">211</a> - <em>Promotions still count as advertising, I&apos;d argue.</em></li>
 <li><a href="https://edit.tosdr.org/cases/216">216</a></li>
 <li><a href="https://edit.tosdr.org/cases/219">219</a></li>
+<li><a href="https://edit.tosdr.org/cases/220">220</a></li>
 <li><a href="https://edit.tosdr.org/cases/327">327</a><h3 id="topic-changes">Topic Changes</h3>
 </li>
 </ul>
 </li>
+<li><a href="https://edit.tosdr.org/topics/27">27</a><ul>
+<li>Name: <em>&quot;<strong>Content Ownership</strong>&quot;</em>.</li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/33">33</a><ul>
+<li>Name: <em>&quot;<strong>Accessibility</strong>&quot;</em>.</li>
+</ul>
+</li>
 <li><a href="https://edit.tosdr.org/topics/36">36</a><ul>
-<li>Name: <em>&quot;<strong>Data Transparency</strong>&quot;</em></li>
+<li>Name: <em>&quot;<strong>Data Transparency</strong>&quot;</em>.</li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/37">37</a><ul>
+<li>Name: <em>&quot;<strong>Waivers</strong>&quot;</em>.</li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/37">42</a><ul>
+<li>Name: <em>&quot;<strong>Binding Arbitration</strong>&quot;</em>.</li>
 </ul>
 </li>
 </ul>
@@ -60,82 +76,85 @@
 <p>This section will be divided on categories, as there are many repeated points of change being made.</p>
 <h3 id="this-service">This Service</h3>
 <ul>
-<li><a href="https://edit.tosdr.org/cases/169">169</a></li>
-<li><a href="https://edit.tosdr.org/cases/237">237</a></li>
-<li><a href="https://edit.tosdr.org/cases/239">239</a></li>
-<li><a href="https://edit.tosdr.org/cases/194">194</a></li>
-<li><a href="https://edit.tosdr.org/cases/303">303</a></li>
-<li><a href="https://edit.tosdr.org/cases/304">304</a></li>
-<li><a href="https://edit.tosdr.org/cases/376">376</a></li>
-<li><a href="https://edit.tosdr.org/cases/234">234</a></li>
-<li><a href="https://edit.tosdr.org/cases/396">396</a></li>
-<li><a href="https://edit.tosdr.org/cases/220">220</a></li>
-<li><a href="https://edit.tosdr.org/cases/215">215</a></li>
-<li><a href="https://edit.tosdr.org/cases/211">211</a></li>
-<li><a href="https://edit.tosdr.org/cases/216">216</a></li>
-<li><a href="https://edit.tosdr.org/cases/181">181</a></li>
-<li><a href="https://edit.tosdr.org/cases/330">330</a></li>
-<li><a href="https://edit.tosdr.org/cases/210">210</a></li>
-<li><a href="https://edit.tosdr.org/cases/282">282</a></li>
-<li><a href="https://edit.tosdr.org/cases/311">311</a></li>
-<li><a href="https://edit.tosdr.org/cases/334">334</a></li>
-<li><a href="https://edit.tosdr.org/cases/337">337</a></li>
-<li><a href="https://edit.tosdr.org/cases/338">338</a></li>
-<li><a href="https://edit.tosdr.org/cases/381">381</a></li>
-<li><a href="https://edit.tosdr.org/cases/209">209</a></li>
+<li><a href="https://edit.tosdr.org/cases/120">120</a></li>
+<li><a href="https://edit.tosdr.org/cases/121">121</a></li>
+<li><a href="https://edit.tosdr.org/cases/122">122</a></li>
+<li><a href="https://edit.tosdr.org/cases/123">123</a></li>
+<li><a href="https://edit.tosdr.org/cases/124">124</a></li>
+<li><a href="https://edit.tosdr.org/cases/135">135</a></li>
+<li><a href="https://edit.tosdr.org/cases/139">139</a></li>
+<li><a href="https://edit.tosdr.org/cases/145">145</a></li>
+<li><a href="https://edit.tosdr.org/cases/146">146</a></li>
+<li><a href="https://edit.tosdr.org/cases/162">162</a></li>
 <li><a href="https://edit.tosdr.org/cases/165">165</a></li>
 <li><a href="https://edit.tosdr.org/cases/167">167</a></li>
-<li><a href="https://edit.tosdr.org/cases/305">305</a></li>
-<li><a href="https://edit.tosdr.org/cases/393">393</a></li>
-<li><a href="https://edit.tosdr.org/cases/146">146</a></li>
+<li><a href="https://edit.tosdr.org/cases/169">169</a></li>
+<li><a href="https://edit.tosdr.org/cases/176">176</a></li>
+<li><a href="https://edit.tosdr.org/cases/181">181</a></li>
+<li><a href="https://edit.tosdr.org/cases/182">182</a></li>
+<li><a href="https://edit.tosdr.org/cases/189">189</a></li>
+<li><a href="https://edit.tosdr.org/cases/194">194</a></li>
+<li><a href="https://edit.tosdr.org/cases/201">201</a></li>
+<li><a href="https://edit.tosdr.org/cases/202">202</a></li>
+<li><a href="https://edit.tosdr.org/cases/203">203</a></li>
+<li><a href="https://edit.tosdr.org/cases/204">204</a></li>
+<li><a href="https://edit.tosdr.org/cases/205">205</a></li>
+<li><a href="https://edit.tosdr.org/cases/206">206</a></li>
+<li><a href="https://edit.tosdr.org/cases/209">209</a></li>
+<li><a href="https://edit.tosdr.org/cases/210">210</a></li>
+<li><a href="https://edit.tosdr.org/cases/211">211</a></li>
+<li><a href="https://edit.tosdr.org/cases/215">215</a></li>
+<li><a href="https://edit.tosdr.org/cases/216">216</a></li>
+<li><a href="https://edit.tosdr.org/cases/220">220</a></li>
+<li><a href="https://edit.tosdr.org/cases/221">221</a></li>
+<li><a href="https://edit.tosdr.org/cases/227">227</a></li>
+<li><a href="https://edit.tosdr.org/cases/228">228</a></li>
+<li><a href="https://edit.tosdr.org/cases/231">231</a></li>
+<li><a href="https://edit.tosdr.org/cases/232">232</a></li>
+<li><a href="https://edit.tosdr.org/cases/234">234</a></li>
+<li><a href="https://edit.tosdr.org/cases/237">237</a></li>
+<li><a href="https://edit.tosdr.org/cases/239">239</a></li>
+<li><a href="https://edit.tosdr.org/cases/243">243</a></li>
 <li><a href="https://edit.tosdr.org/cases/276">276</a></li>
-<li><a href="https://edit.tosdr.org/cases/145">145</a></li>
-<li><a href="https://edit.tosdr.org/cases/285">285</a></li>
-<li><a href="https://edit.tosdr.org/cases/280">280</a></li>
-<li><a href="https://edit.tosdr.org/cases/324">324</a></li>
-<li><a href="https://edit.tosdr.org/cases/332">332</a></li>
-<li><a href="https://edit.tosdr.org/cases/378">378</a></li>
-<li><a href="https://edit.tosdr.org/cases/388">388</a></li>
 <li><a href="https://edit.tosdr.org/cases/278">278</a></li>
+<li><a href="https://edit.tosdr.org/cases/280">280</a></li>
+<li><a href="https://edit.tosdr.org/cases/282">282</a></li>
+<li><a href="https://edit.tosdr.org/cases/285">285</a></li>
 <li><a href="https://edit.tosdr.org/cases/286">286</a></li>
 <li><a href="https://edit.tosdr.org/cases/288">288</a></li>
 <li><a href="https://edit.tosdr.org/cases/289">289</a></li>
-<li><a href="https://edit.tosdr.org/cases/120">120</a></li>
-<li><a href="https://edit.tosdr.org/cases/243">243</a></li>
-<li><a href="https://edit.tosdr.org/cases/139">139</a></li>
-<li><a href="https://edit.tosdr.org/cases/135">135</a></li>
-<li><a href="https://edit.tosdr.org/cases/402">402</a></li>
-<li><a href="https://edit.tosdr.org/cases/228">228</a></li>
-<li><a href="https://edit.tosdr.org/cases/227">227</a></li>
-<li><a href="https://edit.tosdr.org/cases/232">232</a></li>
-<li><a href="https://edit.tosdr.org/cases/231">231</a></li>
 <li><a href="https://edit.tosdr.org/cases/297">297</a></li>
-<li><a href="https://edit.tosdr.org/cases/299">299</a></li>
-<li><a href="https://edit.tosdr.org/cases/302">302</a></li>
-<li><a href="https://edit.tosdr.org/cases/122">122</a></li>
-<li><a href="https://edit.tosdr.org/cases/124">124</a></li>
-<li><a href="https://edit.tosdr.org/cases/123">123</a></li>
-<li><a href="https://edit.tosdr.org/cases/121">121</a></li>
-<li><a href="https://edit.tosdr.org/cases/301">301</a></li>
-<li><a href="https://edit.tosdr.org/cases/329">329</a></li>
-<li><a href="https://edit.tosdr.org/cases/201">201</a></li>
-<li><a href="https://edit.tosdr.org/cases/204">204</a></li>
-<li><a href="https://edit.tosdr.org/cases/203">203</a></li>
-<li><a href="https://edit.tosdr.org/cases/205">205</a></li>
-<li><a href="https://edit.tosdr.org/cases/206">206</a></li>
-<li><a href="https://edit.tosdr.org/cases/379">379</a></li>
-<li><a href="https://edit.tosdr.org/cases/202">202</a></li>
-<li><a href="https://edit.tosdr.org/cases/176">176</a></li>
-<li><a href="https://edit.tosdr.org/cases/162">162</a></li>
-<li><a href="https://edit.tosdr.org/cases/384">384</a></li>
-<li><a href="https://edit.tosdr.org/cases/306">306</a></li>
-<li><a href="https://edit.tosdr.org/cases/323">323</a></li>
-<li><a href="https://edit.tosdr.org/cases/221">221</a></li>
-<li><a href="https://edit.tosdr.org/cases/375">375</a></li>
-<li><a href="https://edit.tosdr.org/cases/307">307</a></li>
-<li><a href="https://edit.tosdr.org/cases/189">189</a></li>
 <li><a href="https://edit.tosdr.org/cases/298">298</a></li>
-<li><a href="https://edit.tosdr.org/cases/300">300</a><h3 id="topic-switch-">Topic Switch:</h3>
+<li><a href="https://edit.tosdr.org/cases/299">299</a></li>
+<li><a href="https://edit.tosdr.org/cases/300">300</a></li>
+<li><a href="https://edit.tosdr.org/cases/301">301</a></li>
+<li><a href="https://edit.tosdr.org/cases/302">302</a></li>
+<li><a href="https://edit.tosdr.org/cases/303">303</a></li>
+<li><a href="https://edit.tosdr.org/cases/304">304</a></li>
+<li><a href="https://edit.tosdr.org/cases/305">305</a></li>
+<li><a href="https://edit.tosdr.org/cases/306">306</a></li>
+<li><a href="https://edit.tosdr.org/cases/307">307</a></li>
+<li><a href="https://edit.tosdr.org/cases/311">311</a></li>
+<li><a href="https://edit.tosdr.org/cases/312">312</a></li>
+<li><a href="https://edit.tosdr.org/cases/323">323</a></li>
+<li><a href="https://edit.tosdr.org/cases/324">324</a></li>
+<li><a href="https://edit.tosdr.org/cases/329">329</a></li>
+<li><a href="https://edit.tosdr.org/cases/330">330</a></li>
+<li><a href="https://edit.tosdr.org/cases/332">332</a></li>
+<li><a href="https://edit.tosdr.org/cases/334">334</a></li>
+<li><a href="https://edit.tosdr.org/cases/337">337</a></li>
+<li><a href="https://edit.tosdr.org/cases/338">338</a></li>
+<li><a href="https://edit.tosdr.org/cases/375">375</a></li>
+<li><a href="https://edit.tosdr.org/cases/376">376</a></li>
+<li><a href="https://edit.tosdr.org/cases/378">378</a></li>
+<li><a href="https://edit.tosdr.org/cases/379">379</a></li>
+<li><a href="https://edit.tosdr.org/cases/381">381</a></li>
+<li><a href="https://edit.tosdr.org/cases/384">384</a></li>
+<li><a href="https://edit.tosdr.org/cases/388">388</a></li>
+<li><a href="https://edit.tosdr.org/cases/391">391</a></li>
+<li><a href="https://edit.tosdr.org/cases/393">393</a></li>
+<li><a href="https://edit.tosdr.org/cases/396">396</a></li>
+<li><a href="https://edit.tosdr.org/cases/402">402</a><h3 id="topic-switch-">Topic Switch:</h3>
 </li>
 <li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/142">142</a></li>
@@ -152,38 +171,34 @@
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/topics/47"><strong>[Suspension &amp; Censorship]</strong></a><ul>
-<li><a href></a></li>
-<li><a href="https://edit.tosdr.org/cases/330">330</a></li>
 <li><a href="https://edit.tosdr.org/cases/156">156</a></li>
+<li><a href="https://edit.tosdr.org/cases/330">330</a></li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/topics/26"><strong>[Anonymity]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/324">324</a></li>
 </ul>
 </li>
-<li><a href="https://edit.tosdr.org/topics/30"><strong>[Copyright License]</strong></a>
--</li>
-<li><a href>[Security]</a><ul>
+<li><a href="https://edit.tosdr.org/topics/50"><strong>[Security]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/291">291</a><h3 id="editing-">Editing:</h3>
 </li>
 </ul>
 </li>
 <li><strong><em>Re-Phrasing</em></strong><ul>
+<li><a href="https://edit.tosdr.org/cases/120">120</a> - <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/126">126</a> - <em>&quot;This service uses first-party cookies on you.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/134">134</a> - <em>&quot;This service can license your content to third parties.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/183">183</a> - <em>&quot;You maintain ownership of your Content.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/195">195</a> - <em>&quot;You can request access, correction and/or deletion of your data.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/206">206</a> - <em>&quot;This Service will give you prior notice before closing your account.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/385">385</a> - <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
 <li><a href="https://edit.tosdr.org/cases/373">373</a> - <em>&quot;This service may use and/or share your location data.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/120">120</a> - <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/385">385</a> - <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
 </ul>
 </li>
-<li><p><strong><em>Weight/Rating</em></strong></p>
-<ul>
+<li><strong><em>Weight/Rating</em></strong><ul>
 <li><a href="https://edit.tosdr.org/cases/161">161</a>, <a href="https://edit.tosdr.org/cases/162">162</a> and <a href="https://edit.tosdr.org/cases/398">398</a><ul>
 <li>Rating: <strong>Neutral</strong>.</li>
 <li>Weight: 70.</li>
@@ -194,6 +209,12 @@
 <li>Rating: <strong>Good</strong>.</li>
 <li>Weight: 20.</li>
 <li>Reason: <em>In reality many third parties have a legal basis to access your personal information, even though many of these may not have the best intentions or the best business practices...</em></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/176">176</a><ul>
+<li>Rating: <strong>Good</strong>.</li>
+<li>Weight: 25.</li>
+<li>Reason: <em>While a minimum amount of logs are kept, said service will still keep your data on storage...</em></li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/239">239</a><ul>
@@ -214,23 +235,7 @@ Reason: <em>While this is no good, it&apos;s pretty much common practice, and fo
 <li>Reason: <em>A &quot;reasonable&quot; government request, for the most part, falls ultimately under a Service&apos;s definition of &quot;reasonable&quot;. While some Services may only respond to court orders and/or subpoenas, it really depends on the Service&apos;s jurisdiction and ethics, without mentioning its government&apos;s practices.</em></li>
 </ul>
 </li>
-<li><a href="https://edit.tosdr.org/cases/176">176</a><ul>
-<li>Rating: <strong>Good</strong>.</li>
-<li>Weight: 25.</li>
-<li>Reason: <em>While a minimum amount of logs are kept, said service will still keep your data on storage...</em></li>
 </ul>
-</li>
-</ul>
-<p><strong>Case</strong> | <strong>Link</strong> | <strong>Changes</strong>
---- | --- | ---
-149 | <a href="https://edit.tosdr.org/cases/149">Link</a> | <strong>Wording</strong>: <em>Liabilities on behalf of this Service are limited to a limited fee/the fees you&apos;ve paid to the Service.</em>
-142| <a href="https://edit.tosdr.org/cases/142">Link</a> |  <strong>Topic</strong>: <em>Switch to <strong>deprecated</strong></em>.
-169 | <a href="https://edit.tosdr.org/cases/169">Link</a> | <strong>Wording</strong>: <em>This Service</em>[...]
-147 | <a href="https://edit.tosdr.org/cases/147">Link</a> | <strong>Grammar</strong>: <em>Defend, indemnify[...]</em>
-237 | <a href="https://edit.tosdr.org/cases/237">Link</a> | <strong>Grammar</strong>: <em>[...]this Service&apos;s country</em>
-239 | <a href="https://edit.tosdr.org/cases/239">Link</a> | <strong>Wording</strong>: <em>This Service[...]</em>
-150 | <a href="https://edit.tosdr.org/cases/150">Link</a> | <strong>Topic</strong>: Switch to <a href="https://edit.tosdr.org/topics/52">Content</a>
-| <a href>Link</a> |</p>
 </li>
 </ul>
 </article></div><div style="background-color: #b4b2b2;width: 50px;height:50px;line-height: 50px;text-align: center;position: fixed;bottom: 10px;right: 10px;padding-top:5px;" onclick="document.documentElement.scrollTop = document.body.scrollTop =0;">
