--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -74,9 +74,92 @@
 </ul>
 <h2 id="cases">Cases</h2>
 <p>This section will be divided on categories, as there are many repeated points of change being made.</p>
-<h3 id="this-service">This Service</h3>
+<h3 id="topic-switch-">Topic Switch:</h3>
 <ul>
-<li><a href="https://edit.tosdr.org/cases/120">120</a></li>
+<li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
+<li><a href="https://edit.tosdr.org/cases/142">142</a></li>
+<li><a href="https://edit.tosdr.org/cases/212">212</a></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/52"><strong>[Content]</strong></a><ul>
+<li><a href="https://edit.tosdr.org/cases/150">150</a></li>
+<li><a href="https://edit.tosdr.org/cases/280">280</a></li>
+<li><a href="https://edit.tosdr.org/cases/281">281</a></li>
+<li><a href="https://edit.tosdr.org/cases/284">284</a></li>
+<li><a href="https://edit.tosdr.org/cases/285">285</a></li>
+<li><a href="https://edit.tosdr.org/cases/292">292</a></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/47"><strong>[Suspension &amp; Censorship]</strong></a><ul>
+<li><a href="https://edit.tosdr.org/cases/156">156</a></li>
+<li><a href="https://edit.tosdr.org/cases/330">330</a></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/26"><strong>[Anonymity]</strong></a><ul>
+<li><a href="https://edit.tosdr.org/cases/324">324</a></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/50"><strong>[Security]</strong></a><ul>
+<li><a href="https://edit.tosdr.org/cases/291">291</a><h3 id="editing-">Editing:</h3>
+</li>
+</ul>
+</li>
+<li><strong><em>Re-Phrasing</em></strong><ul>
+<li><a href="https://edit.tosdr.org/cases/120">120</a> - <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/126">126</a> - <em>&quot;This service uses first-party cookies on you.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/134">134</a> - <em>&quot;This service can license your content to third parties.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/183">183</a> - <em>&quot;You maintain ownership of your Content.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/195">195</a> - <em>&quot;You can request access, correction and/or deletion of your data.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/206">206</a> - <em>&quot;This Service will give you prior notice before closing your account.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/373">373</a> - <em>&quot;This service may use and/or share your location data.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/385">385</a> - <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
+</ul>
+</li>
+<li><p><strong><em>Weight/Rating</em></strong></p>
+<ul>
+<li><a href="https://edit.tosdr.org/cases/161">161</a>, <a href="https://edit.tosdr.org/cases/162">162</a> and <a href="https://edit.tosdr.org/cases/398">398</a><ul>
+<li>Rating: <strong>Neutral</strong>.</li>
+<li>Weight: 70.</li>
+<li>Reason: <em>I believe Users need to be informed about a certain Service not granting them any refunds, and so a higher weight would make it mare visible.</em></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/167">167</a><ul>
+<li>Rating: <strong>Good</strong>.</li>
+<li>Weight: 20.</li>
+<li>Reason: <em>In reality many third parties have a legal basis to access your personal information, even though many of these may not have the best intentions or the best business practices...</em></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/176">176</a><ul>
+<li>Rating: <strong>Good</strong>.</li>
+<li>Weight: 25.</li>
+<li>Reason: <em>While a minimum amount of logs are kept, said service will still keep your data on storage...</em></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/239">239</a><ul>
+<li>Rating: <strong>Bad</strong></li>
+<li>Weight: 80.</li>
+<li>Reason: This is really bad, specially because it&apos;s private conversations we&apos;re talking about...</li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/cases/336">336</a><ul>
+<li>Rating: <strong>Bad</strong>.
+-Weight: 30.
+Reason: <em>While this is no good, it&apos;s pretty much common practice, and for most services you can opt out with relative ease.</em></li>
+</ul>
+</li>
+<li><p><a href="https://edit.tosdr.org/cases/393">393</a></p>
+<ul>
+<li>Rating: <strong>Good</strong>.</li>
+<li>Weight: 10.</li>
+<li>Reason: <em>A &quot;reasonable&quot; government request, for the most part, falls ultimately under a Service&apos;s definition of &quot;reasonable&quot;. While some Services may only respond to court orders and/or subpoenas, it really depends on the Service&apos;s jurisdiction and ethics, without mentioning its government&apos;s practices.</em><h3 id="this-service">This Service</h3>
+All of the following Cases have <em>&quot;The service&quot;</em> written in them, but I&apos;d argue switching to <em>&quot;This service&quot;</em> could catch our users&apos; attention much more efficiently, and could potentially inform them with much more success.</li>
+</ul>
+</li>
+<li><p><a href="https://edit.tosdr.org/cases/120">120</a></p>
+</li>
 <li><a href="https://edit.tosdr.org/cases/121">121</a></li>
 <li><a href="https://edit.tosdr.org/cases/122">122</a></li>
 <li><a href="https://edit.tosdr.org/cases/123">123</a></li>
@@ -154,87 +237,7 @@
 <li><a href="https://edit.tosdr.org/cases/391">391</a></li>
 <li><a href="https://edit.tosdr.org/cases/393">393</a></li>
 <li><a href="https://edit.tosdr.org/cases/396">396</a></li>
-<li><a href="https://edit.tosdr.org/cases/402">402</a><h3 id="topic-switch-">Topic Switch:</h3>
-</li>
-<li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
-<li><a href="https://edit.tosdr.org/cases/142">142</a></li>
-<li><a href="https://edit.tosdr.org/cases/212">212</a></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/topics/52"><strong>[Content]</strong></a><ul>
-<li><a href="https://edit.tosdr.org/cases/150">150</a></li>
-<li><a href="https://edit.tosdr.org/cases/280">280</a></li>
-<li><a href="https://edit.tosdr.org/cases/281">281</a></li>
-<li><a href="https://edit.tosdr.org/cases/284">284</a></li>
-<li><a href="https://edit.tosdr.org/cases/285">285</a></li>
-<li><a href="https://edit.tosdr.org/cases/292">292</a></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/topics/47"><strong>[Suspension &amp; Censorship]</strong></a><ul>
-<li><a href="https://edit.tosdr.org/cases/156">156</a></li>
-<li><a href="https://edit.tosdr.org/cases/330">330</a></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/topics/26"><strong>[Anonymity]</strong></a><ul>
-<li><a href="https://edit.tosdr.org/cases/324">324</a></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/topics/50"><strong>[Security]</strong></a><ul>
-<li><a href="https://edit.tosdr.org/cases/291">291</a><h3 id="editing-">Editing:</h3>
-</li>
-</ul>
-</li>
-<li><strong><em>Re-Phrasing</em></strong><ul>
-<li><a href="https://edit.tosdr.org/cases/120">120</a> - <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/126">126</a> - <em>&quot;This service uses first-party cookies on you.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/134">134</a> - <em>&quot;This service can license your content to third parties.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/183">183</a> - <em>&quot;You maintain ownership of your Content.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/195">195</a> - <em>&quot;You can request access, correction and/or deletion of your data.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/206">206</a> - <em>&quot;This Service will give you prior notice before closing your account.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/373">373</a> - <em>&quot;This service may use and/or share your location data.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/385">385</a> - <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
-</ul>
-</li>
-<li><strong><em>Weight/Rating</em></strong><ul>
-<li><a href="https://edit.tosdr.org/cases/161">161</a>, <a href="https://edit.tosdr.org/cases/162">162</a> and <a href="https://edit.tosdr.org/cases/398">398</a><ul>
-<li>Rating: <strong>Neutral</strong>.</li>
-<li>Weight: 70.</li>
-<li>Reason: <em>I believe Users need to be informed about a certain Service not granting them any refunds, and so a higher weight would make it mare visible.</em></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/cases/167">167</a><ul>
-<li>Rating: <strong>Good</strong>.</li>
-<li>Weight: 20.</li>
-<li>Reason: <em>In reality many third parties have a legal basis to access your personal information, even though many of these may not have the best intentions or the best business practices...</em></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/cases/176">176</a><ul>
-<li>Rating: <strong>Good</strong>.</li>
-<li>Weight: 25.</li>
-<li>Reason: <em>While a minimum amount of logs are kept, said service will still keep your data on storage...</em></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/cases/239">239</a><ul>
-<li>Rating: <strong>Bad</strong></li>
-<li>Weight: 80.</li>
-<li>Reason: This is really bad, specially because it&apos;s private conversations we&apos;re talking about...</li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/cases/336">336</a><ul>
-<li>Rating: <strong>Bad</strong>.
--Weight: 30.
-Reason: <em>While this is no good, it&apos;s pretty much common practice, and for most services you can opt out with relative ease.</em></li>
-</ul>
-</li>
-<li><a href="https://edit.tosdr.org/cases/393">393</a><ul>
-<li>Rating: <strong>Good</strong>.</li>
-<li>Weight: 10.</li>
-<li>Reason: <em>A &quot;reasonable&quot; government request, for the most part, falls ultimately under a Service&apos;s definition of &quot;reasonable&quot;. While some Services may only respond to court orders and/or subpoenas, it really depends on the Service&apos;s jurisdiction and ethics, without mentioning its government&apos;s practices.</em></li>
-</ul>
-</li>
+<li><a href="https://edit.tosdr.org/cases/402">402</a></li>
 </ul>
 </li>
 </ul>
