More polish and adding descriptions.

--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -41,14 +41,16 @@
 <h2 id="topics">Topics</h2>
 <p>This section will be divided on categories, as there are many repeated points of change being made.</p>
 <h3 id="new-topics">New Topics</h3>
+<p><em>New Topic(s) that could distinguish Cases much more efficiently.</em></p>
 <ul>
 <li><strong>Advertising</strong>.<ul>
 <li><a href="https://edit.tosdr.org/cases/211">211</a> - <em>Promotions still count as advertising, I&apos;d argue.</em></li>
 <li><a href="https://edit.tosdr.org/cases/216">216</a></li>
 <li><a href="https://edit.tosdr.org/cases/219">219</a></li>
 <li><a href="https://edit.tosdr.org/cases/220">220</a></li>
-<li><a href="https://edit.tosdr.org/cases/327">327</a><h3 id="topic-changes">Topic Changes</h3>
-</li>
+<li><a href="https://edit.tosdr.org/cases/327">327</a></li>
+<li><a href="https://edit.tosdr.org/cases/336">336</a><h3 id="topic-changes">Topic Changes</h3>
+<em>I&apos;d suggest the following names for Topics, since what is inside them is, overall, what defines them</em>.</li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/topics/27">27</a><ul>
@@ -73,8 +75,9 @@
 </li>
 </ul>
 <h2 id="cases">Cases</h2>
-<p>This section will be divided on categories, as there are many repeated points of change being made.</p>
+<p><em>This section will be divided on categories, as there are many repeated points of change being made</em>.</p>
 <h3 id="topic-switch-">Topic Switch:</h3>
+<p><em>These Cases, I&apos;d suggest, would be more appropriate if they were moved to the specified Topics</em>:</p>
 <ul>
 <li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/142">142</a></li>
@@ -105,17 +108,17 @@
 </ul>
 </li>
 <li><strong><em>Re-Phrasing</em></strong><ul>
-<li><a href="https://edit.tosdr.org/cases/120">120</a> - <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/126">126</a> - <em>&quot;This service uses first-party cookies on you.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/134">134</a> - <em>&quot;This service can license your content to third parties.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/149">149</a> - <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/151">151</a> - <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/183">183</a> - <em>&quot;You maintain ownership of your Content.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/195">195</a> - <em>&quot;You can request access, correction and/or deletion of your data.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/206">206</a> - <em>&quot;This Service will give you prior notice before closing your account.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/373">373</a> - <em>&quot;This service may use and/or share your location data.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/385">385</a> - <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
-<li><a href="https://edit.tosdr.org/cases/390">390</a> - <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/120">120</a>: <em>&quot;Users are not involved in (critical) changes to this service&apos;s Terms.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/126">126</a>: <em>&quot;This service uses first-party cookies on you.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/134">134</a>: <em>&quot;This service can license your content to third parties.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/149">149</a>: <em>&quot;Liabilities on behalf of this Service cannot exceed a certain amount or the fees you&apos;ve paid.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/151">151</a>: <em>&quot;You have a limited amount of time to take legal action against this service.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/183">183</a>: <em>&quot;You maintain ownership of your Content.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/195">195</a>: <em>&quot;You can request access, correction and/or deletion of your data.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/206">206</a>: <em>&quot;This Service will give you prior notice before closing your account.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/373">373</a>: <em>&quot;This service may use and/or share your location data.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/385">385</a>: <em>&quot;If you block trackers, your experience will not be impacted.&quot;</em></li>
+<li><a href="https://edit.tosdr.org/cases/390">390</a>: <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
 </ul>
 </li>
 <li><p><strong><em>Weight/Rating</em></strong></p>
