--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -148,9 +148,9 @@
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/336">336</a><ul>
-<li>Rating: <strong>Bad</strong>.
--Weight: 30.
-Reason: <em>While this is no good, it&apos;s pretty much common practice, and for most services you can opt out with relative ease.</em></li>
+<li>Rating: <strong>Bad</strong>.</li>
+<li>Weight: 30.</li>
+<li>Reason: <em>While this is no good, it&apos;s pretty much common practice, and for most services you can opt out with relative ease.</em></li>
 </ul>
 </li>
 <li><p><a href="https://edit.tosdr.org/cases/393">393</a></p>
