--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -32,9 +32,10 @@
 </ul>
 </li>
 <li><a href="#cases">Cases</a><ul>
-<li><a href="#this-service"><em>This Service</em></a></li>
+<li><a href="#new-cases">New Cases</a></li>
 <li><a href="#topic-switch">Topic Switch</a></li>
 <li><a href="#editing">Editing</a></li>
+<li><a href="#this-service"><em>This Service</em></a></li>
 </ul>
 </li>
 </ul>
@@ -43,7 +44,7 @@
 <h3 id="new-topics">New Topics</h3>
 <p><em>New Topic(s) that could distinguish Cases much more efficiently.</em></p>
 <ul>
-<li><strong>Advertising</strong>.<ul>
+<li><strong>Advertising</strong>. - <strong><em>[DONE 12/14/2020]</em></strong><ul>
 <li><a href="https://edit.tosdr.org/cases/211">211</a> - <em>Promotions still count as advertising, I&apos;d argue.</em></li>
 <li><a href="https://edit.tosdr.org/cases/216">216</a></li>
 <li><a href="https://edit.tosdr.org/cases/219">219</a></li>
@@ -76,12 +77,53 @@
 </ul>
 <h2 id="cases">Cases</h2>
 <p><em>This section will be divided on categories, as there are many repeated points of change being made</em>.</p>
-<h3 id="topic-switch-">Topic Switch:</h3>
-<p><em>These Cases, I&apos;d suggest, would be more appropriate if they were moved to the specified Topics</em>:</p>
+<h3 id="new-cases">New Cases</h3>
 <ul>
+<li>Case: <code>Instead of asking directly, this Service will assume your consent merely from your usage.</code><ul>
+<li>Topic: <a href="https://edit.tosdr.org/topics/34">User Choice</a></li>
+<li>Weight: 45 (it is an extremely deceptive tactic many services employ)</li>
+<li>Rating: <strong>Bad</strong></li>
+<li>Description: <code>The Service infers your acceptance from your continued usage, instead of prompting you to read the Terms and asking for direct consent.</code></li>
+<li>Related to privacy: <code>Yes</code>(?)</li>
+</ul>
+</li>
+<li>Case: <code>This service employs targeted advertising based on your (precise) location.</code><ul>
+<li>Topic: <a href="https://edit.tosdr.org/topics/57">Advertising</a></li>
+<li>Weight: 60</li>
+<li>Rating: <strong>Bad</strong></li>
+<li>Description: <code>The Service uses your location data to provide targeted (third-party) advertising to its users.</code></li>
+<li>Related to privacy: <code>Yes</code></li>
+</ul>
+</li>
+<li>Case: <code>This Service provides a list of Third Parties involved in its operation.</code><ul>
+<li>Topic: <a href="https://edit.tosdr.org/topics/36">User Information</a></li>
+<li>Weight: 20</li>
+<li>Rating: <strong>Good</strong></li>
+<li>Description: <code>The Service provides a list detailing the third parties involved, their roles, and may even provide more information.</code></li>
+<li>Related to privacy: <code>Yes</code></li>
+</ul>
+</li>
+<li>Case: <code>There is a last date of update on the Privacy Policy.</code><ul>
+<li>Topic: <a href="https://edit.tosdr.org/topics/38">Changes</a></li>
+<li>Weight: 20</li>
+<li>Rating: <strong>Neutral</strong></li>
+<li>Description: <code>The Service provides a date of last update on its Privacy Policy.</code></li>
+<li>Related to privacy: <code>Yes</code></li>
+</ul>
+</li>
+<li>Case: <code>This service reserves the right to change pricing and product descriptions at any time, and may do so without notice.</code><ul>
+<li>Topic: <a href="https://edit.tosdr.org/topics/54">Payments</a></li>
+<li>Weight: 30</li>
+<li>Rating: <strong>Bad</strong></li>
+<li>Description: <code>The Service provides a list detailing the third parties involved, their roles, and may even provide more information.</code></li>
+<li>Related to privacy: <code>No</code><h3 id="topic-switch-">Topic Switch:</h3>
+<em>These Cases, I&apos;d suggest, would be more appropriate if they were moved to these specified Topics</em>:</li>
+</ul>
+</li>
 <li><a href="https://edit.tosdr.org/topics/55"><strong>[DEPRECATED]</strong></a><ul>
 <li><a href="https://edit.tosdr.org/cases/142">142</a></li>
 <li><a href="https://edit.tosdr.org/cases/212">212</a></li>
+<li><a href="https://edit.tosdr.org/cases/238">238</a> - <em>Redundant Case when we have Case <a href="https://edit.tosdr.org/cases/280">280</a></em></li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/topics/52"><strong>[Content]</strong></a><ul>
@@ -103,7 +145,13 @@
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/topics/50"><strong>[Security]</strong></a><ul>
-<li><a href="https://edit.tosdr.org/cases/291">291</a><h3 id="editing-">Editing:</h3>
+<li><a href="https://edit.tosdr.org/cases/209">209</a></li>
+<li><a href="https://edit.tosdr.org/cases/291">291</a></li>
+</ul>
+</li>
+<li><a href="https://edit.tosdr.org/topics/36"><strong>[User Information]</strong></a><ul>
+<li><a href="https://edit.tosdr.org/cases/306">306</a></li>
+<li><a href="https://edit.tosdr.org/cases/334">334</a><h3 id="editing-">Editing:</h3>
 </li>
 </ul>
 </li>
@@ -121,18 +169,17 @@
 <li><a href="https://edit.tosdr.org/cases/390">390</a>: <em>&quot;This Service can use your suggestions without compensation to you.&quot;</em></li>
 </ul>
 </li>
-<li><p><strong><em>Weight/Rating</em></strong></p>
-<ul>
+<li><strong><em>Weight/Rating</em></strong><ul>
 <li><a href="https://edit.tosdr.org/cases/161">161</a>, <a href="https://edit.tosdr.org/cases/162">162</a> and <a href="https://edit.tosdr.org/cases/398">398</a><ul>
 <li>Rating: <strong>Neutral</strong>.</li>
 <li>Weight: 70.</li>
-<li>Reason: <em>I believe Users need to be informed about a certain Service not granting them any refunds, and so a higher weight would make it mare visible.</em></li>
+<li>Reason: <em>I believe Users need to be informed about a certain Service not granting them any refunds, and so a higher weight would make it more visible.</em></li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/167">167</a><ul>
 <li>Rating: <strong>Good</strong>.</li>
 <li>Weight: 20.</li>
-<li>Reason: <em>In reality many third parties have a legal basis to access your personal information, even though many of these may not have the best intentions or the best business practices...</em></li>
+<li>Reason: <em>In reality many third parties have a legal basis to access your personal information, even though many of these may not have the best intentions in mind, nor the best business practices...</em></li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/176">176</a><ul>
@@ -142,9 +189,9 @@
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/239">239</a><ul>
-<li>Rating: <strong>Bad</strong></li>
+<li>Rating: <strong>Blocker</strong></li>
 <li>Weight: 80.</li>
-<li>Reason: This is really bad, specially because it&apos;s private conversations we&apos;re talking about...</li>
+<li>Reason: <em>This is really bad, specially because it&apos;s private conversations we&apos;re talking about</em>...</li>
 </ul>
 </li>
 <li><a href="https://edit.tosdr.org/cases/336">336</a><ul>
@@ -153,16 +200,14 @@
 <li>Reason: <em>While this is no good, it&apos;s pretty much common practice, and for most services you can opt out with relative ease.</em></li>
 </ul>
 </li>
-<li><p><a href="https://edit.tosdr.org/cases/393">393</a></p>
-<ul>
+<li><a href="https://edit.tosdr.org/cases/393">393</a><ul>
 <li>Rating: <strong>Good</strong>.</li>
 <li>Weight: 10.</li>
-<li>Reason: <em>A &quot;reasonable&quot; government request, for the most part, falls ultimately under a Service&apos;s definition of &quot;reasonable&quot;. While some Services may only respond to court orders and/or subpoenas, it really depends on the Service&apos;s jurisdiction and ethics, without mentioning its government&apos;s practices.</em><h3 id="this-service">This Service</h3>
+<li>Reason: <em>A &quot;reasonable&quot; government request, for the most part, falls ultimately under a Service&apos;s definition of &quot;reasonable&quot;. While some Services may only respond to court orders and/or subpoenas, it really depends on the Service&apos;s jurisdiction and ethics, without mentioning its government&apos;s practices regarding privacy.</em><h3 id="this-service">This Service</h3>
 All of the following Cases have <em>&quot;The service&quot;</em> written in them, but I&apos;d argue switching to <em>&quot;This service&quot;</em> could catch our users&apos; attention much more efficiently, and could potentially inform them with much more success.</li>
 </ul>
 </li>
-<li><p><a href="https://edit.tosdr.org/cases/120">120</a></p>
-</li>
+<li><a href="https://edit.tosdr.org/cases/120">120</a></li>
 <li><a href="https://edit.tosdr.org/cases/121">121</a></li>
 <li><a href="https://edit.tosdr.org/cases/122">122</a></li>
 <li><a href="https://edit.tosdr.org/cases/123">123</a></li>
