Added date of last update.

--- a/ToDo/Phoenix-Site\Cases.html
+++ b/ToDo/Phoenix-Site\Cases.html
@@ -24,6 +24,7 @@
 <body><div id="readme" class="container"><article class="markdown-body entry-content"><h1 id="case-revision-12-12-2020-">Case Revision [12/12/2020]</h1>
 <p>This is my personal list for suggestions regarding the <a href="https://edit.tosdr.org">Phoenix Site</a>, its organization and its Ratings. This list is an in-depth analysis of each category on the Phoenix Site, with the intention to make it as transparent, comprehensive and informative as possible.</p>
 <p>If you have any suggestions, feedback or ideas, don&apos;t hesitate to contact me or any other member of the ToS;DR Team!</p>
+<p><strong><em>Last update: 12/18/2020</em></strong>.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <ul>
 <li><a href="#topics">Topics</a><ul>
